internal/kgateway/translator/gateway/testutils/outputs/traffic-policy/invalid-targetref.yaml
Clusters:
- connectTimeout: 5s
  dnsLookupFamily: V4_PREFERRED
  loadAssignment:
    clusterName: backend_default_example-backend_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 172.18.0.2
              portValue: 31566
  metadata: {}
  name: backend_default_example-backend_0
  type: LOGICAL_DNS
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      commonHttpProtocolOptions:
        idleTimeout: 30s
      explicitHttpConfig:
        http2ProtocolOptions: {}
      httpFilters:
      - name: envoy.filters.http.aws_lambda
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.Config
          arn: arn:aws:lambda:us-east-1:000000000000:function:hello-function:$LATEST
      - name: envoy.filters.http.aws_request_signing
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
          credentialProvider:
            inlineCredential:
              accessKeyId: AKIAIOSFODNN7EXAMPLE
              secretAccessKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
          region: us-east-1
          serviceName: lambda
      - name: envoy.filters.http.upstream_codec
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_example-svc_80
  type: EDS
- connectTimeout: 5s
  metadata: {}
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 80
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~80
        statPrefix: http
        useRemoteAddress: true
    name: listener~80
  name: listener~80
Routes:
- ignorePortInHostMatching: true
  name: listener~80
  virtualHosts:
  - domains:
    - '*'
    name: listener~80~*
    routes:
    - directResponse:
        body:
          inlineString: invalid route configuration detected and replaced with a direct
            response.
        status: 500
      match:
        prefix: /
      name: listener~80~*-route-0-httproute-example-route-default-0-0-matcher-0
Statuses:
  gateways:
    default/example-gateway:
      conditions:
      - lastTransitionTime: null
        message: ""
        reason: ListenerSetsNotAllowed
        status: Unknown
        type: AttachedListenerSets
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    default/example-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: 'Replaced Rule (0): targetRef HTTPRoute "non-existent-route" not
            found in namespace "default"'
          reason: RouteRuleReplaced
          status: "False"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
  policies:
    TrafficPolicy/default/policy-invalid-backend:
      ancestors:
      - ancestorRef:
          group: gateway.kgateway.dev
          kind: Backend
          name: non-existent-backend
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: targetRef Backend "non-existent-backend" not found in namespace
            "default"
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: null
          message: ""
          reason: Pending
          status: "False"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/policy-invalid-gateway:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: non-existent-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: targetRef Gateway "non-existent-gateway" not found in namespace
            "default"
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: null
          message: ""
          reason: Pending
          status: "False"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/policy-invalid-xlistenerset:
      ancestors:
      - ancestorRef:
          group: gateway.networking.x-k8s.io
          kind: XListenerSet
          name: non-existent-listenerset
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: targetRef XListenerSet "non-existent-listenerset" not found in
            namespace "default"
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: null
          message: ""
          reason: Pending
          status: "False"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/policy-mixed-refs:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: targetRef HTTPRoute "non-existent-route" not found in namespace
            "default"
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: null
          message: ""
          reason: Pending
          status: "False"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/policy-valid-httproute:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
